--- a/index.html
+++ b/index.html
@@ -1,75 +1,53 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Presensi Pimpinan Struktural</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Daftar Kehadiran Pimpinan</title>
+<style>
+  body { font-family: Arial, sans-serif; padding: 20px; }
+  table { border-collapse: collapse; width: 100%; }
+  th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
+  th { background-color: #f4f4f4; }
+</style>
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
-  <div class="max-w-2xl mx-auto p-6">
-    <h1 class="text-2xl font-bold text-center mb-4">📋 Kehadiran Pimpinan Struktural</h1>
-    <p class="text-sm text-center text-gray-500 mb-4">Terhubung langsung dengan admin piket</p>
-    
-    <div id="loading" class="text-center mb-4">⏳ Mengambil data...</div>
-    <table class="w-full table-auto bg-white rounded-lg shadow overflow-hidden">
-      <thead class="bg-blue-500 text-white">
-        <tr>
-          <th class="py-2 px-4">Nama</th>
-          <th class="py-2 px-4">Kehadiran</th>
-        </tr>
-      </thead>
-      <tbody id="table-body" class="text-center">
-        <!-- Data akan muncul di sini -->
-      </tbody>
-    </table>
+<body>
+<h2>Daftar Kehadiran Pimpinan</h2>
+<table id="attendanceTable">
+  <thead>
+    <tr>
+      <th>Nama</th>
+      <th>Status Kehadiran</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!-- Data dari API bakal masuk sini -->
+  </tbody>
+</table>
 
-    <div class="text-center mt-4">
-      <button onclick="fetchData()" class="bg-blue-600 text-white py-1 px-4 rounded hover:bg-blue-700">
-        🔄 Refresh Data
-      </button>
-    </div>
-  </div>
+<script>
+  async function fetchAttendance() {
+    try {
+      const response = await fetch('https://sheetdb.io/api/v1/typ7a4q3pcxgh');
+      const data = await response.json();
+      const tbody = document.querySelector('#attendanceTable tbody');
+      tbody.innerHTML = ''; // Kosongin dulu
 
-  <script>
-    const API_URL = "https://sheetdb.io/api/v1/typ7a4q3pcxgh";
-    const tableBody = document.getElementById("table-body");
-    const loading = document.getElementById("loading");
-
-    async function fetchData() {
-      tableBody.innerHTML = "";
-      loading.style.display = "block";
-
-      try {
-        const res = await fetch(API_URL);
-        const data = await res.json();
-
-        data.forEach(item => {
-          const row = document.createElement("tr");
-
-          const namaCell = document.createElement("td");
-          namaCell.textContent = item.nama || "-";
-          namaCell.className = "py-2 px-4 border";
-
-          const statusCell = document.createElement("td");
-          statusCell.textContent = item.kehadiran || "-";
-          statusCell.className = "py-2 px-4 border font-semibold " + 
-            (item.kehadiran?.toLowerCase().includes("hadir") ? "text-green-600" : "text-red-500");
-
-          row.appendChild(namaCell);
-          row.appendChild(statusCell);
-          tableBody.appendChild(row);
-        });
-
-      } catch (error) {
-        tableBody.innerHTML = "<tr><td colspan='2' class='py-4 text-red-600'>⚠️ Gagal mengambil data</td></tr>";
-      }
-
-      loading.style.display = "none";
+      data.forEach(item => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+          <td>${item.nama}</td>
+          <td>${item.status}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+    } catch (error) {
+      console.error('Error fetch data:', error);
+      document.body.innerHTML += '<p style="color:red;">Gagal memuat data kehadiran.</p>';
     }
+  }
 
-    // Fetch data saat halaman load
-    fetchData();
-  </script>
+  fetchAttendance();
+</script>
 </body>
 </html>
