--- a/index.html
+++ b/index.html
@@ -1,53 +1,90 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Daftar Kehadiran Pimpinan</title>
-<style>
-  body { font-family: Arial, sans-serif; padding: 20px; }
-  table { border-collapse: collapse; width: 100%; }
-  th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
-  th { background-color: #f4f4f4; }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Daftar Kehadiran Pimpinan</title>
+  <style>
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; padding: 20px; background: #f9f9f9; }
+    h2 { color: #333; text-align: center; margin-bottom: 20px; }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      background: white;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+    th, td {
+      padding: 12px 15px;
+      text-align: center;
+      border-bottom: 1px solid #ddd;
+    }
+    th {
+      background-color: #4CAF50;
+      color: white;
+      font-weight: 600;
+    }
+    tr:hover {
+      background-color: #f1f1f1;
+    }
+  </style>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
-<h2>Daftar Kehadiran Pimpinan</h2>
-<table id="attendanceTable">
-  <thead>
-    <tr>
-      <th>Nama</th>
-      <th>Status Kehadiran</th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- Data dari API bakal masuk sini -->
-  </tbody>
-</table>
+  <h2>Daftar Kehadiran Pimpinan</h2>
+  <table id="attendanceTable">
+    <thead>
+      <tr>
+        <th>Nama</th>
+        <th>Status Kehadiran</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td colspan="2">Loading data...</td></tr>
+    </tbody>
+  </table>
 
-<script>
-  async function fetchAttendance() {
-    try {
-      const response = await fetch('https://sheetdb.io/api/v1/typ7a4q3pcxgh');
-      const data = await response.json();
-      const tbody = document.querySelector('#attendanceTable tbody');
-      tbody.innerHTML = ''; // Kosongin dulu
+  <script>
+    google.charts.load('current', {'packages':['corechart']});
+    google.charts.setOnLoadCallback(fetchData);
 
-      data.forEach(item => {
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${item.nama}</td>
-          <td>${item.status}</td>
-        `;
-        tbody.appendChild(tr);
-      });
-    } catch (error) {
-      console.error('Error fetch data:', error);
-      document.body.innerHTML += '<p style="color:red;">Gagal memuat data kehadiran.</p>';
+    function fetchData() {
+      const spreadsheetId = '1Q8RtVeK0ElCqA92tJMBSwxkniTpqgg2eSSm-wInUmvA';
+      const query = encodeURIComponent('SELECT A, B'); // Kolom A dan B
+      const url = `https://docs.google.com/spreadsheets/d/${spreadsheetId}/gviz/tq?tq=${query}`;
+
+      fetch(url)
+        .then(res => res.text())
+        .then(dataText => {
+          // Google Visualization API mengembalikan data bukan JSON biasa,
+          // kita harus parse manual
+          const jsonData = JSON.parse(dataText.substring(47, dataText.length - 2));
+
+          const tableBody = document.querySelector('#attendanceTable tbody');
+          tableBody.innerHTML = ''; // Clear loading
+
+          jsonData.table.rows.forEach(row => {
+            const nama = row.c[0] ? row.c[0].v : '';
+            const status = row.c[1] ? row.c[1].v : '';
+
+            const tr = document.createElement('tr');
+            tr.innerHTML = `<td>${nama}</td><td>${status}</td>`;
+            tableBody.appendChild(tr);
+          });
+
+          if(jsonData.table.rows.length === 0){
+            tableBody.innerHTML = '<tr><td colspan="2">Data kosong</td></tr>';
+          }
+        })
+        .catch(err => {
+          const tableBody = document.querySelector('#attendanceTable tbody');
+          tableBody.innerHTML = `<tr><td colspan="2" style="color:red;">Gagal memuat data.</td></tr>`;
+          console.error('Error:', err);
+        });
     }
-  }
-
-  fetchAttendance();
-</script>
+  </script>
 </body>
 </html>
