--- a/index.html
+++ b/index.html
@@ -1,76 +1,44 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <title>Daftar Kehadiran Pimpinan</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background-color: #f2f2f2; }
-    h2 { text-align: center; color: #333; }
-    table {
-      width: 80%;
-      margin: 0 auto;
-      border-collapse: collapse;
-      background: white;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 10px;
-      text-align: center;
-    }
-    th {
-      background-color: #4CAF50;
-      color: white;
-    }
-    tr:hover {
-      background-color: #f1f1f1;
-    }
-  </style>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-</head>
-<body>
-  <h2>Daftar Kehadiran Pimpinan</h2>
-  <table id="attendanceTable">
-    <thead>
-      <tr>
-        <th>Nama</th>
-        <th>Status Kehadiran</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td colspan="2">Loading...</td></tr>
-    </tbody>
-  </table>
+<script>
+  google.charts.load('current', {'packages':['table']});
+  google.charts.setOnLoadCallback(drawTable);
 
-  <script>
-    google.charts.load('current', {'packages':['table']});
-    google.charts.setOnLoadCallback(drawTable);
+  function drawTable() {
+    const query = new google.visualization.Query(
+      'https://docs.google.com/spreadsheets/d/e/2PACX-1vRJkW2ZYEWEqZnGcUhf58HIlg-8vr1Yonnu-_uRaKZRcqinxjL_Owo5YbN0IL4vkUqekLhXSP98a2Tf/gviz/tq?gid=0&headers=1'
+    );
 
-    function drawTable() {
-      const query = new google.visualization.Query(
-        'https://docs.google.com/spreadsheets/d/e/2PACX-1vRJkW2ZYEWEqZnGcUhf58HIlg-8vr1Yonnu-_uRaKZRcqinxjL_Owo5YbN0IL4vkUqekLhXSP98a2Tf/gviz/tq?gid=0&headers=1'
-      );
+    query.send(function(response) {
+      if (response.isError()) {
+        document.querySelector("#attendanceTable tbody").innerHTML = '<tr><td colspan="100%">Gagal memuat data 😵</td></tr>';
+        console.error('Error:', response.getMessage());
+        return;
+      }
 
-      query.send(function(response) {
-        if (response.isError()) {
-          document.querySelector("#attendanceTable tbody").innerHTML = '<tr><td colspan="2">Gagal memuat data 😵</td></tr>';
-          console.error('Error fetching data:', response.getMessage());
-          return;
+      const data = response.getDataTable();
+      const tbody = document.querySelector("#attendanceTable tbody");
+      const thead = document.querySelector("#attendanceTable thead tr");
+
+      // Kosongin dulu
+      thead.innerHTML = "";
+      tbody.innerHTML = "";
+
+      // Generate header dari data
+      for (let col = 0; col < data.getNumberOfColumns(); col++) {
+        const th = document.createElement("th");
+        th.textContent = data.getColumnLabel(col);
+        thead.appendChild(th);
+      }
+
+      // Generate rows
+      for (let i = 0; i < data.getNumberOfRows(); i++) {
+        const tr = document.createElement("tr");
+        for (let j = 0; j < data.getNumberOfColumns(); j++) {
+          const td = document.createElement("td");
+          td.textContent = data.getValue(i, j) || "";
+          tr.appendChild(td);
         }
-
-        const data = response.getDataTable();
-        const numRows = data.getNumberOfRows();
-        const tbody = document.querySelector("#attendanceTable tbody");
-        tbody.innerHTML = "";
-
-        for (let i = 0; i < numRows; i++) {
-          const nama = data.getValue(i, 0);
-          const status = data.getValue(i, 1);
-          const row = `<tr><td>${nama}</td><td>${status}</td></tr>`;
-          tbody.innerHTML += row;
-        }
-      });
-    }
-  </script>
-</body>
-</html>
+        tbody.appendChild(tr);
+      }
+    });
+  }
+</script>
