--- a/index.html
+++ b/index.html
@@ -1,44 +1,34 @@
-<script>
-  google.charts.load('current', {'packages':['table']});
-  google.charts.setOnLoadCallback(drawTable);
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Kehadiran Pimpinan</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 20px;
+      background-color: #f9f9f9;
+      text-align: center;
+    }
+    iframe {
+      width: 95%;
+      height: 600px;
+      border: 1px solid #ccc;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #333;
+    }
+  </style>
+</head>
+<body>
 
-  function drawTable() {
-    const query = new google.visualization.Query(
-      'https://docs.google.com/spreadsheets/d/e/2PACX-1vRJkW2ZYEWEqZnGcUhf58HIlg-8vr1Yonnu-_uRaKZRcqinxjL_Owo5YbN0IL4vkUqekLhXSP98a2Tf/gviz/tq?gid=0&headers=1'
-    );
+  <h2>Daftar Kehadiran Pimpinan Struktural</h2>
 
-    query.send(function(response) {
-      if (response.isError()) {
-        document.querySelector("#attendanceTable tbody").innerHTML = '<tr><td colspan="100%">Gagal memuat data 😵</td></tr>';
-        console.error('Error:', response.getMessage());
-        return;
-      }
+  <iframe 
+    src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRJkW2ZYEWEqZnGcUhf58HIlg-8vr1Yonnu-_uRaKZRcqinxjL_Owo5YbN0IL4vkUqekLhXSP98a2Tf/pubhtml?widget=true&amp;headers=false"
+    frameborder="0" allowfullscreen>
+  </iframe>
 
-      const data = response.getDataTable();
-      const tbody = document.querySelector("#attendanceTable tbody");
-      const thead = document.querySelector("#attendanceTable thead tr");
-
-      // Kosongin dulu
-      thead.innerHTML = "";
-      tbody.innerHTML = "";
-
-      // Generate header dari data
-      for (let col = 0; col < data.getNumberOfColumns(); col++) {
-        const th = document.createElement("th");
-        th.textContent = data.getColumnLabel(col);
-        thead.appendChild(th);
-      }
-
-      // Generate rows
-      for (let i = 0; i < data.getNumberOfRows(); i++) {
-        const tr = document.createElement("tr");
-        for (let j = 0; j < data.getNumberOfColumns(); j++) {
-          const td = document.createElement("td");
-          td.textContent = data.getValue(i, j) || "";
-          tr.appendChild(td);
-        }
-        tbody.appendChild(tr);
-      }
-    });
-  }
-</script>
+</body>
+</html>
