--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Kehadiran Pimpinan</title>
+  <title>Monitoring Kehadiran Harian</title>
   <style>
     body {
       font-family: sans-serif;
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-  <h2>Daftar Kehadiran Pimpinan Struktural</h2>
+  <h2>Monitoring Kehadiran Harian Pejabat Struktural Kejaksaan Negeri Padang Panjang</h2>
 
   <iframe 
     src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRJkW2ZYEWEqZnGcUhf58HIlg-8vr1Yonnu-_uRaKZRcqinxjL_Owo5YbN0IL4vkUqekLhXSP98a2Tf/pubhtml?widget=true&amp;headers=false"
